--- a/index.html
+++ b/index.html
@@ -1,23 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta
-  name="description"
-  content="Resolución de Trabajo Práctico N°5 de RollingCode - DOM (Document Object Model)"
-/>
-<meta
-  name="keywords"
-  content="trabajo practico 5, modeo de objetos del documento, DOM, Bootstrap5, soluciones, javascript"
-/>
-<meta name="author" content="Bruno Madozzo Romay" />
-  <title>EJERCICIO N°6 | TRABAJO PRÁCTICO N°5 | ROLLING CODE SCHOOL</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="./CSS/styles.css">
-</head>
-<body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="./JS/ejercicio1-tp5.js"></script>
-</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Resolución de Trabajo Práctico N°5 de RollingCode - DOM (Document Object Model) - BOM (Browser Object Model)"
+    />
+    <meta
+      name="keywords"
+      content="trabajo practico 5, DOM, BOM, Bootstrap5, CSS, soluciones, Javascript"
+    />
+    <meta name="author" content="Bruno Madozzo Romay" />
+    <title>EJERCICIO N°5 | TRABAJO PRÁCTICO N°5 | ROLLING CODE SCHOOL</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./CSS/styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-md py-4">
+        <div class="container-fluid">
+          <a class="navbar-brand fw-bold text-secondary" href="./index.html"
+            >Trabajo Práctico 5</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse text-center"
+            id="navbarNavDropdown"
+          >
+            <ul class="navbar-nav w-100 d-flex justify-content-center fs-5">
+              <li class="nav-item px-2">
+                <a class="nav-link active text-secondary" href="./index.html"
+                  >EJERCICIO N°5</a
+                >
+              </li>
+              <li class="nav-item px-2">
+                <a class="nav-link text-secondary" href="./sobreMi.html">SOBRE MÍ</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main class="py-4">
+      <section class="container mt-5 text-secondary">
+        <h1 class="text-center mb-3 fw-bold text-white">
+          Cronómetro online
+        </h1>
+        <div class="d-flex flex-column gap-2 justify-content-md-center align-items-md-center containerCronometro m-auto p-4 rounded-2">
+          <div class="container pt-3 d-flex justify-content-center align-items-center rounded-2 text-center" id="containerCronometro">
+            <h2 class="display-1 px-2 fw-bold text-white">00:00:00</h2>
+          </div>
+          <div class="d-flex flex-wrap gap-3 containerButtons text-dark">
+            <button class="btn btnIniciar rounded-3 fw-bold fs-5" id="btnIniciar">Iniciar</button>
+            <button class="btn btnPausar rounded-3 fw-bold fs-5" id="btnPausar">Pausar</button>
+            <button class="btn btnContinuar rounded-3 fw-bold fs-5" id="btnContinuar">Continuar</button>
+            <button class="btn btnRestablecer rounded-3 fw-bold fs-5" id="btnRestablecer">Restablecer</button>
+          </div>
+        </div>
+      </section>
+      <section class="container text-white mt-4">
+        <h4 class="fw-bold mb-3 ">¿Qué es el cronómetro online?</h4>
+        <p>Un cronómetro online es una aplicación fácil de usar que le permite llevar un registro del tiempo e iniciar un cronómetro en su ordenador. Mide el tiempo transcurrido en horas, minutos, segundos y milisegundos. La herramienta también le permite registrar vueltas y ver la duración de cada una de ellas, así como el tiempo total transcurrido.</p>
+        <h4 class="fw-bold mb-3 mt-5">¿Cómo puedo utilizar el cronómetro online?</h4>
+        <p>Cualquiera puede poner en marcha un cronómetro de vueltas fácilmente utilizando un cronómetro online. A continuación le explicamos cómo utilizar esta herramienta online:</p>
+        <ul>
+          <li>Pulse <span class="fw-bold">Iniciar</span> para iniciar el cronómetro.</li>
+          <li>Pulse <span class="fw-bold">Pausar</span> para pausar el cronómetro.</li>
+          <li>Pulse <span class="fw-bold">Continuar</span> para seguir contando.</li>
+          <li>Pulse <span class="fw-bold">Restablecer</span> para reiniciar el cronómetro.</li>
+        </ul>
+        <h4 class="fw-bold mb-3 mt-5">¿Cómo funciona el cronómetro online?</h4>
+        <p>El cronómetro online con vueltas mide el tiempo transcurrido entre que se inicia y se para (pulsando Iniciar y Pausar). Este cronómetro por Internet registra el tiempo transcurrido utilizando el reloj de su navegador y la zona horaria en la que se encuentras.</p>
+        <h4 class="fw-bold mb-3 mt-5">¿Para qué sirve el cronómetro online?</h4>
+        <p>El cronómetro online se puede utilizar para controlar el tiempo, llevar la cuenta y controlar el tiempo transcurrido entre eventos. Es útil para estudiar, trabajar o hacer ejercicio. Como se trata de una herramienta online gratuita, también puede utilizarse como cronómetro de pantalla completa, por lo que se puede proyectar en un aula o en una reunión para llevar la cuenta del tiempo y registrar las vueltas del trabajo realizado.</p>
+      </section>
+    </main>
+    <footer class="p-3 mt-5">
+      <div class="text-light text-center">
+        <p>
+          @RollingCodeSchool. Comisión 73i. 2023 | Diseñado por Bruno Madozzo
+        </p>
+      </div>
+    </footer>
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"
+    ></script>
+    <script src="./JS/ejercicio5-tp5.js"></script>
+  </body>
 </html>
