Resolucion de ejercicio N°5-TP5-Cronometro.

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <h1 class="text-center mb-3 fw-bold text-white">
           Cronómetro online
         </h1>
-        <div class="d-flex flex-column gap-2 justify-content-md-center align-items-md-center containerCronometro m-auto p-4 rounded-2">
+        <div class="d-flex flex-column gap-2 justify-content-md-center align-items-md-center containerCronometro m-auto py-5 rounded-2">
           <div class="container pt-3 d-flex justify-content-center align-items-center rounded-2 text-center" id="containerCronometro">
-            <h2 class="display-1 px-2 fw-bold text-white">00:00:00</h2>
+            <h2 class="display-1 fw-bold text-white">00 : 00 : 00</h2>
           </div>
           <div class="d-flex flex-wrap gap-3 containerButtons text-dark">
             <button class="btn btnIniciar rounded-3 fw-bold fs-5" id="btnIniciar">Iniciar</button>
