--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
       <nav class="navbar navbar-expand-md py-4">
         <div class="container-fluid">
-          <a class="navbar-brand fw-bold text-secondary" href="./index.html"
+          <a class="navbar-brand fw-bold text-secondary" href="#"
             >Trabajo Práctico 5</a
           >
           <button
