quite estilos css de pagina sobre mi

--- a/index.html
+++ b/index.html
@@ -112,6 +112,6 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"
     ></script>
-    <script src="./JS/ejercicio5-tp5.js"></script>
+    <script src="./JS/cronometro.js"></script>
   </body>
 </html>
